# node-clipboard

./: .npmignore  CMakeLists.txt  license  package.json  readme.md
.github/workflows/: build.yml
source/: index.d.ts  index.js
source/native/: clipboard.cpp  clipboard.hpp  image.cpp  image.hpp  main.cpp
